# digital-khata-website

./: README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
accounts/: models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
frontend/layouts/partials/: navbar-dashboard.html
roznamcha/: apps.py  models.py  urls.py  views.py
roznamcha/migrations/: 0001_initial.py
static/CACHE/css/: output.033598635cba.css  output.3db68e95d0f6.css  output.4a1b5f966b8a.css  output.7cec3dd82dda.css  output.e5aede01b6b9.css  output.f600d4294e52.css  output.faf779c55bff.css
static/js/: dashboard.js
static/src/: output.css
templates/: aside.html  base.html  footer.html  header.html  headerupdate.html  index.html  nav.html  scripts.html  setup.html  stylesheet.html
templates/accounts/: landing.html  landing_page.html  profile.html  sign-in.html  sign-up.html
templates/rozmancha/: accounts.html  dashboard.html  roznamcha.html
